--- a/home.html
+++ b/home.html
@@ -117,7 +117,7 @@
         footer{
 
             width: 100%;
-            height: 50px;
+            height:fit-content;
             background: black;
             position: relative;
             top: 25px;
