--- a/home.html
+++ b/home.html
@@ -127,6 +127,7 @@
             color: red;
             justify-content: center;
             font-weight: 100;
+            flex-wrap: wrap;
         }
     </style>
 
