--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div id="logo">
-            <img src="https://scontent.fclo7-1.fna.fbcdn.net/v/t39.30808-6/275047406_1537918776586302_3605560625250341705_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeF3cMU-gF8tKu65pCz5p2bxGEwh1a5d1t8YTCHVrl3W33tSe2qzKj3HSRoJrzLMvr46KjEjV5G0pBithl7AWZXI&_nc_ohc=3YgLm5GwYoQAX_njOtb&_nc_ht=scontent.fclo7-1.fna&oh=00_AfBJYq09sZNBpOZh7eCKOfUqDFBhBJ6f4qU_FUkee9bbZg&oe=64B0E69A" alt="">
+            <img src="https://drive.google.com/file/d/1Ktny9hTVUFy4M2dn1la0JDLsG_DNipZl/view?usp=drive_link" alt="">
 
             <p id="title_logo">an Juan Electronics</p>
             
