--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div id="logo">
-            <img src="https://drive.google.com/file/d/1Ktny9hTVUFy4M2dn1la0JDLsG_DNipZl/view?usp=drive_link" alt="">
+            <img src="img/logo sanjuan.jpg" alt="">
 
             <p id="title_logo">an Juan Electronics</p>
             
