--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div id="logo">
-            <img src="img/logo sanjuan.jpg" alt="">
+            <img src="img/logo Sanjuan.png" alt="">
 
             <p id="title_logo">an Juan Electronics</p>
             
