--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
             <p id="title_logo">an Juan Electronics</p>
             
         </div>
+        <input type="checkbox" class='bx bx-menu' id="toogle_menu">
         <ul class="menu">
             <li>
                 <a href=""> Inicio</a>
