--- a/home.html
+++ b/home.html
@@ -108,6 +108,7 @@
             position: fixed;
             right: 40px;
             bottom: 40px;
+            z-index: 99;
         }
         #whatsapp img{
             width: 100%;
@@ -137,7 +138,7 @@
 </body>
 <footer>
     <p>3022456227 - 300 6549863</p>
-    <p>sanjuanelectronics@gmail.com</p>
+    <a href="mailto:sanjuanelectronics@gmail.com?Subject=Aquí%20el%20asunto%20del%20mail">sanjuanelectronics@gmail.com</a>
     <p>Transversal 9#57 N 202 , Popayán, Colombia</p>
 </footer>
 </html>
