--- a/home.html
+++ b/home.html
@@ -131,6 +131,8 @@
             justify-content: center;
             font-weight: 100;
             flex-wrap: wrap;
+            padding-bottom: 10px;
+            padding-top: 10px;
         }
     </style>
 
