--- a/home.html
+++ b/home.html
@@ -105,7 +105,28 @@
        
        </div>
 
+       <section id="galeria">
+        <h2>Galeria</h2>
+        <h2 style="margin-top: 25px;"> videos</h2>
+        <div id="video_section">
 
+            <iframe width="250" height="260" src="https://www.youtube.com/embed/GDM5oDdsyt4" title="PROMOCIONAL" frameborder="0" allow="accelerometer; autoplay=0; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+
+        <iframe width="250" height="260" src="https://www.youtube.com/embed/UPO34A4Pd88" title="Automatizacion de conjuntos cerrados" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <h2 style="margin-top: 25px;">Fotos</h2>
+        <div id="imagen_section">
+            <img src="https://scontent.fbog11-1.fna.fbcdn.net/v/t1.6435-9/87361732_1019092621802256_6077622703752216576_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=730e14&_nc_ohc=krsAPygjecoAX_esGsB&_nc_ht=scontent.fbog11-1.fna&oh=00_AfDTpu-30eqt4Jy6kfOTLljELRAg938iZyirFcKTZPeRBQ&oe=64D50758" alt="">
+
+            <img src="https://scontent.fbog11-1.fna.fbcdn.net/v/t39.30808-6/275999629_1340489349795339_4768322175727044350_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=mzTDPhfGDgMAX_JW8QK&_nc_ht=scontent.fbog11-1.fna&oh=00_AfDjmKoQVlEDK9yWAu0SP1Uf51PGTyErserPtzgEQSYp2Q&oe=64B29E3B" alt="">
+            <img src="https://scontent.fbog11-1.fna.fbcdn.net/v/t39.30808-6/275987623_1340489129795361_2348722397800447115_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=wsSlafNdjMYAX-xqrCm&_nc_ht=scontent.fbog11-1.fna&oh=00_AfBKG8rlpHa2ldf84505d3aVEZGg-28jlQPR6GtYE0wB0A&oe=64B1D813" alt="">
+
+                <img src="https://scontent.fbog11-1.fna.fbcdn.net/v/t1.6435-9/74566702_726030051241275_4292060380529688576_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=730e14&_nc_ohc=n-fIumeHuLIAX-Agcbm&_nc_ht=scontent.fbog11-1.fna&oh=00_AfBTvmrifPVy3zwoKf8HQWU6HA_Nxqh1s1OKoWR5L-2FCw&oe=64D51EA1" alt="">
+                <img src="https://scontent.fbog11-1.fna.fbcdn.net/v/t1.6435-9/82414326_785113721999574_6407307155057147904_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=84a396&_nc_ohc=ZH-qiH_Ch5kAX8fk_iv&_nc_ht=scontent.fbog11-1.fna&oh=00_AfBNFjnzRU6rdfOjfzOHqP8J-qMx_Ozv_-PhiLeFo0GEwQ&oe=64D50B0D" alt="">
+                <img src="https://scontent.fbog11-1.fna.fbcdn.net/v/t1.6435-9/80072954_757029564807990_2410875961990971392_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=730e14&_nc_ohc=y8ONBwsj_qoAX-YyrWP&_nc_ht=scontent.fbog11-1.fna&oh=00_AfCSfKicBy8W1HU4KjOYhDNQ9KMRkAzgh_7tljeV2daPEw&oe=64D51566" alt="">
+        </div>
+       </section>
 
     </div>
 
