--- a/home.html
+++ b/home.html
@@ -13,7 +13,8 @@
         <div id="logo">
             <img src="img/logo Sanjuan.png" alt="">
 
-            <p id="title_logo">an Juan Electronics</p>
+            <p id="title_logo">an Juan </p>
+            <p id="title_logo1">Electronics</p>
             
         </div>
         <input type="checkbox" class='bx bx-menu' id="toogle_menu">
