--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
             <img src="img/logo Sanjuan.png" alt="">
 
             <p id="title_logo">an Juan </p>
-            <p id="title_logo1">Electronics</p>
+            <p id="title_logo1">lectronics</p>
             
         </div>
         <input type="checkbox" class='bx bx-menu' id="toogle_menu">
