--- a/index.html
+++ b/index.html
@@ -208,13 +208,17 @@
             width: 90%;
             height: 30px;
            position: relative;
+           display: flex;
            top: 8px;
            float: right;
+           flex-direction: row;
+           background: gold;
+           gap: 25px;
 
         }
         #redes_icon a{
-            width: 15px;
-            height: 15px;
+            width:25px;
+            height: 100%
             
         }
         #icon_facebook{
