--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
             flex-wrap: wrap;
             justify-content: center;
             gap: 15px;
+            padding-top:15px ;
         }
         #redes_footer{
         width:300px ;
@@ -209,7 +210,7 @@
             height: 30px;
            position: relative;
            display: flex;
-           top: 8px;
+           top: 50px;
            float: right;
            flex-direction: row;
           
