--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         width:300px ;
         height: 200px;
         padding: 5px;
-        color: wheat;
+        color: white;
         }
         #contact_footer{
         width:300px ;
@@ -236,8 +236,8 @@
 <footer>
 
     <div id="redes_footer">
-        <h3>san Juan electronics</h3>
-        <h5>seguridad electronica</h5>
+        <h3>San Juan Electronics</h3>
+        <h5>Seguridad electronica</h5>
         <div id="redes_icon">
             <a href="https://www.facebook.com/sanjuanelectronicspopayan/" target="_blank"><img  id="icon_facebook" src="https://pbs.twimg.com/profile_images/1646955748444852231/XGehZ_9v_400x400.jpg" alt=""></a>
             <a href="https://www.instagram.com/sanjuanelectronics35/?fbclid=IwAR1PZ1MVUteCze-8Bx5D7UCQsbgxIVpQhHa8S6XEvFc8VOx4FNE20Y_HsIE" target="_blank"> <img id="icon_facebook" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/150px-Instagram_logo_2022.svg.png" alt=""></a>
