--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <li>
                 <a href=""> Nosotros</a>
             </li>
+            <li>
+                <a href="#galeria"> Galeria</a>
+            </li>
         </ul>
 
     </header>
