--- a/index.html
+++ b/index.html
@@ -135,17 +135,52 @@
        </section>
 
     </div>
-
+    <div id="redes_flotante">
+        <a href="https://www.facebook.com/sanjuanelectronicspopayan/" target="_blank"><img  id="facebook_float" src="https://pbs.twimg.com/profile_images/1646955748444852231/XGehZ_9v_400x400.jpg" alt=""></a>
+        <a href="https://www.instagram.com/sanjuanelectronics35/?fbclid=IwAR1PZ1MVUteCze-8Bx5D7UCQsbgxIVpQhHa8S6XEvFc8VOx4FNE20Y_HsIE" target="_blank"> <img id="insta_float" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/150px-Instagram_logo_2022.svg.png" alt=""></a>
+        <a href="https://www.youtube.com/@sanjuansalcedo9561" target="_blank"><img id="youtobe_float"  src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg" alt=""></a>
+    </div>
 
     <a id="whatsapp" target="_blank" href="https://wa.me/573022456227?text=Quisiera%20mas%20informacion%20sobre%20sus%20productos%20y%20servicios%20"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/WhatsApp_icon.png/598px-WhatsApp_icon.png" alt=""></a>
 
     <style>
- #whatsapp{
-            width: 50px;
-            height: 50px;
+ #redes_flotante{
+    width: fit-content;
+    border-radius: 30%;
+    position: fixed;
+    height: fit-content;
+    z-index: 99;
+    bottom: 15%;
+    right: 18px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    
+}
+#facebook_float,#insta_float, #youtobe_float{
+    border-radius: 30%;
+    width: 35px;
+    height: 32px;
+    position: relative;
+    
+}
+#facebook_float:hover{
+    box-shadow: 3px 3px 3px 1px rgba(51, 38, 233, 0.692);
+
+
+}
+#insta_float:hover{
+    box-shadow: 3px 3px 3px 1px rgba(219, 25, 115, 0.479);
+}
+#youtobe_float:hover{
+    box-shadow: 3px 3px 3px 1px rgba(219, 25, 25, 0.479);
+}
+        #whatsapp{
+            width: 40;
+            height: 40px;
             position: fixed;
-            right: 40px;
-            bottom: 40px;
+            right: 20px;
+            bottom: 48px;
             z-index: 99;
         }
         #whatsapp img{
