--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </ul>
         
     </div>
-    <div id="info_head"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" style="fill: rgb(250, 248, 248);"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"></path><path d="M13 7h-2v5.414l3.293 3.293 1.414-1.414L13 11.586z"></path></svg><p>Lunes - Sábado: 8:00 am - 06.00 pm Domingo: Cerrado</p> <a>contacto: 3006549863 - 3022456227</a></div>
+    <div id="info_head"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" style="fill: rgb(250, 248, 248);"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"></path><path d="M13 7h-2v5.414l3.293 3.293 1.414-1.414L13 11.586z"></path></svg><p>Lunes - Sábado: 8:00 am - 06.00 pm Domingo: Cerrado</p> <a>Contacto: 3006549863 - 3022456227</a></div>
     <header>
         <div id="logo">
             <img src="img/logo Sanjuan.png" alt="">
@@ -342,9 +342,9 @@
         <h3>San Juan Electronics</h3>
         <h5>Seguridad electronica</h5>
         <div id="redes_icon">
-            <a href="https://www.facebook.com/sanjuanelectronicspopayan/" target="_blank"><img  id="icon_facebook" src="https://pbs.twimg.com/profile_images/1646955748444852231/XGehZ_9v_400x400.jpg" alt=""></a>
-            <a href="https://www.instagram.com/sanjuanelectronics35/?fbclid=IwAR1PZ1MVUteCze-8Bx5D7UCQsbgxIVpQhHa8S6XEvFc8VOx4FNE20Y_HsIE" target="_blank"> <img id="icon_facebook" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/150px-Instagram_logo_2022.svg.png" alt=""></a>
-            <a href="https://www.youtube.com/@sanjuansalcedo9561" target="_blank"><img id="icon_facebook"  src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg" alt=""></a>
+            <a href="https://www.facebook.com/sanjuanelectronicspopayan/" target="_blank"><box-icon name='facebook-circle' id="icon_facebook" type='logo' color='white' ></box-icon></a>
+            <a href="https://www.instagram.com/sanjuanelectronics35/?fbclid=IwAR1PZ1MVUteCze-8Bx5D7UCQsbgxIVpQhHa8S6XEvFc8VOx4FNE20Y_HsIE" target="_blank"> <box-icon name='instagram' id="icon_facebook" type='logo' color='white' ></box-icon></a>
+            <a href="https://www.youtube.com/@sanjuansalcedo9561" target="_blank"><box-icon name='youtube' id="icon_facebook" type='logo' color='white' ></box-icon></a>
 
         </div>
     
