--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 
         <iframe width="290" height="250" src="https://www.youtube.com/embed/UPO34A4Pd88" title="Automatizacion de conjuntos cerrados" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        
+        <iframe width="290" height="250" src="https://www.youtube.com/embed/vS-c28AApWQ" title="PROMO GPS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
        
         </div>
         <h2 style="margin-top: 25px;">Fotos</h2>
