--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     
     <title>San Juan</title>
+    <link rel="icon" type="image/x-icon" href="img/sanjuan.png">
 </head>
 <body>
     <div id="lateral">
