--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
            </div>
        
         <ul class="menu_lateral">
-            <li class="item_menu">
-                <a href="/"> <box-icon name='home-alt'></box-icon>Inicio</a>
+            <li >
+                <a class="item_menu active" href="/"> <box-icon name='home-alt'></box-icon>Inicio</a>
             </li>
             <li>
-                <a href=""> 
+                <a class="item_menu" href=""> 
                     <i class='bx bx-bar-chart-square'></i>Servicios</a>
                 </li>
             <li>
