--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
         </ul>
         <div id="redes_lateral">
         <a href="https://www.facebook.com/sanjuanelectronicspopayan/"><box-icon name='facebook-circle' type='logo' color='rgba(10,14,227,0.99)' ></box-icon></a> 
-        <a href="https://www.instagram.com/sanjuanelectronics35/"><box-icon name='instagram' type='logo' color='rgba(204,43,98,0.77)' ></box-icon></a> 
+        <a href="https://www.instagram.com/sanjuanelectronics35/"><box-icon name='instagram' type='logo' color='#F56040' ></box-icon></a> 
         <a href="https://www.youtube.com/@sanjuansalcedo9561"><box-icon name='youtube' type='logo' color='rgba(220,10,10,0.99)' ></box-icon></a> 
 
         </div>
         
     </div>
+    <div id="button_lateral"> <input type="checkbox" class='bx bx-menu' id="toogle_menu_lateral"></div>
     <div id="info_head"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" style="fill: rgb(250, 248, 248);"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"></path><path d="M13 7h-2v5.414l3.293 3.293 1.414-1.414L13 11.586z"></path></svg><p>Lunes - Sábado: 8:00 am - 06.00 pm Domingo: Cerrado</p> <a>Contacto: 3006549863 - 3022456227</a></div>
     <header>
         <div id="logo">
@@ -378,7 +379,6 @@
   font-size:50px;
   position: fixed;
   z-index: 1000;
-  
   right:  17px;
   bottom: 55px;
   opacity: 0;
@@ -397,10 +397,14 @@ transition: opacity 1s, transform 1s;
         };
         document.addEventListener("scroll", () => {
           let btn_subi=document.getElementById("subir")
+          let button_lateral=document.getElementById("button_lateral")
           if (scrollContainer().scrollTop > showOnPx) {
             btn_subi.classList.add("show")
+            button_lateral.classList.add("show")
           } else {
             btn_subi.classList.remove("show")
+            button_lateral.classList.remove("show")
+
           }
         })
         
