--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <title>San Juan</title>
     <link rel="icon" type="image/x-icon" href="img/sanjuan.png">
 </head>
-<body>
+<body onMouseMove="sigueme();">
+    <div id="bola">
+        <div id="bola_child"></div>
+    </div>
     <div id="lateral">
         <div id="logo_menu">
             <img src="img/sanjuan.png" alt=""></div>
