--- a/nosotros.html
+++ b/nosotros.html
@@ -7,7 +7,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="styles.css">
     
-    <title>Document</title>
+    <title>San Juan</title>
+    <link rel="icon" type="image/x-icon" href="img/sanjuan.png">
 </head>
 <body onMouseMove="sigueme();">
     <div id="bola">
