--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container">
 
         <div id="sorteos">
-            <p>Promo <br>de verano!!</p>
+            <p id="p_verano">    Promo de <br><a id="verano" href="">Verano...</a></p>
             
             <div id="cont_rta">
                 <p>Por este mes <a href="" id="descuento">15 %</a> de descuento en tu dispositivo GPS vehicular</p>
