--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
         <p class="serviciosFoot">-Seguridad electronica</p>
         <p class="serviciosFoot">-Energia Solar</p>
         <p class="serviciosFoot">-Accesorios para computador</p>
+        <a href="/politica_privacidad.html">nuestra política de privacidad</a>
         
     </div>
   
