--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
     <div class="container">
 
        <!----> <div id="sorteos">
-            <p id="p_verano">   Promo de <br><a id="verano" href="">Verano...</a></p>
+            <p id="p_verano">   Promo de <br><a id="verano" href="">Amor y Amistad...</a></p>
             
             <div id="cont_rta">
                 <p>Obten un <a href="" id="descuento">15 %</a> de descuento en tu dispositivo GPS vehicular.</p>
 
-                <a id="valido" href="">Valido del 1 al 15 de septiembre o hasta agotar existencias.</a>
+                <a id="valido" href="">Valido del 1 al 30 de septiembre o hasta agotar existencias.</a>
             </div>
             <script>
 
