--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             
 
 
-            <button >Cotizar</button>
+            <a target="_blank" href="https://wa.me/573026055289?text=Quisiera%20obtener%20informaciono%20sobre%20sus%20servicios%20">Empezar</a>
         </div>
 
     </header>
