--- a/nosotros.html
+++ b/nosotros.html
@@ -46,6 +46,18 @@
                 <a href="#galeria"> Galeria</a>
             </li>
         </ul>
+        <div id="content_header">
+            <h2>Somos San Juan Electronics.</h2>
+            <p>No dejes tu bienestar en manos de la delincuencia! <br>     ¿Cansado de la inseguridad? <br> ¿Prefieres no salir a la calle con tu familia?
+                <br>   ¿Temes dejar tu solo vehiculo en un lugar publico?
+                <br><br>En San Juan Electronics tenemos soluciones de seguridad que se ajustan a tus nesecidades, contamos con personal calficado y una larga trayectoria en el mundo de la seguridad electronica.
+            </p>
+            <p>Permitenos ayudarte a proteger lo que mas te ha costado.</p>
+            
+
+
+            <button >Cotizar</button>
+        </div>
 
     </header>
     <div class="container">
@@ -62,7 +74,7 @@
                  <div class="slider-container"> 
                     <img
                     class="slider-item"
-                    src="https://scontent.fclo7-1.fna.fbcdn.net/v/t39.30808-6/365837403_690754163067662_5910337303261343004_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=730e14&_nc_eui2=AeHRDlUTu50bE3zp_KBs9gzAYIcaqC9Hh2JghxqoL0eHYhTHUBN2drqzPz0X6tWmHTuXl57izjCbhvjPnhqMZjxc&_nc_ohc=UDwTAL1dBz4AX98Vpc0&_nc_ht=scontent.fclo7-1.fna&oh=00_AfBluu-C-4Zvzciiyl-HgNOAwgwMimJfffYRbd0wen04EA&oe=64D9B643"
+                    src="/img/camara_head1.png"
                   />
                 
                 <img
