--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div id="content_header">
             <h2>Somos San Juan Electronics.</h2>
             <p>No dejes tu bienestar en manos de la delincuencia! <br>     ¿Cansado de la inseguridad? <br> ¿Prefieres no salir a la calle con tu familia?
-                <br>   ¿Temes dejar tu solo vehiculo en un lugar publico?
+                <br>   ¿Temes dejar solo tu vehiculo en un lugar publico?
                 <br><br>En San Juan Electronics tenemos soluciones de seguridad que se ajustan a tus nesecidades, contamos con personal calficado y una larga trayectoria en el mundo de la seguridad electronica.
             </p>
             <p>Permitenos ayudarte a proteger lo que mas te ha costado.</p>
