--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="styles.css">
     <meta name="facebook-domain-verification" content="e0yzs9qdy56udfr137wqwvtvnzgvkv" />
-    <title>San Juan</title>
-    <link rel="icon" type="image/x-icon" href="img/sanjuan.png">
+    <title>San Juan Electronics</title>
+    <link rel="icon" type="image/x-icon" href="img/sanjuan.png" >
 </head>
 <body onMouseMove="sigueme();">
 
