--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div id="cont_rta">
                 <p>Obten un <a href="" id="descuento">15 %</a> de descuento en tu dispositivo GPS vehicular.</p>
 
-                <a id="valido" href="">Valido del 1 al 30 de septiembre o hasta agotar existencias.</a>
+                <a id="valido" href="">Valido del 1 al 30 de Enero o hasta agotar existencias.</a>
             </div>
             <script>
 
