--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
    
     <div class="container">
 
-       <!----> <div id="sorteos">
+       <!-- <div id="sorteos">
             <p id="p_verano">   Promo de <br><a id="verano" href="">Lanzamiento</a></p>
             
             <div id="cont_rta">
@@ -180,7 +180,7 @@
             <a id="btn_obtener" target="_blank" href="https://wa.me/573026055289?text=Quisiera%20obtener%20el descuento%20para%20GPS%20"> Obtener oferta</a>
             <div id="sun"></div>
 
-        </div>
+        </div>-->
        <h2>Soluciones de seguridad</h2>
 
        <div id="cont_services" style="padding-bottom: 55px;">
